# serializer version: 1
# name: test_forecast_daily
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2023-08-07T12:00:00',
    'humidity': 96,
    'precipitation': 0.0,
    'pressure': 991.0,
    'temperature': 18.0,
    'templow': 15.0,
    'wind_bearing': 114,
    'wind_gust_speed': 32.76,
    'wind_speed': 10.08,
  })
# ---
# name: test_forecast_daily.1
  dict({
    'cloud_coverage': 75,
    'condition': 'partlycloudy',
    'datetime': '2023-08-13T12:00:00',
    'humidity': 59,
    'precipitation': 0.0,
    'pressure': 1013.0,
    'temperature': 20.0,
    'templow': 14.0,
    'wind_bearing': 234,
    'wind_gust_speed': 35.64,
    'wind_speed': 14.76,
  })
# ---
# name: test_forecast_daily.2
  dict({
    'cloud_coverage': 100,
    'condition': 'fog',
    'datetime': '2023-08-07T09:00:00',
    'humidity': 100,
    'precipitation': 0.0,
    'pressure': 992.0,
    'temperature': 18.0,
    'templow': 18.0,
    'wind_bearing': 103,
    'wind_gust_speed': 23.76,
    'wind_speed': 9.72,
  })
# ---
# name: test_forecast_daily.3
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2023-08-07T15:00:00',
    'humidity': 89,
    'precipitation': 0.0,
    'pressure': 991.0,
    'temperature': 16.0,
    'templow': 16.0,
    'wind_bearing': 108,
    'wind_gust_speed': 31.68,
    'wind_speed': 12.24,
  })
# ---
# name: test_forecast_service
  dict({
    'forecast': list([
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-07T12:00:00',
        'humidity': 96,
        'precipitation': 0.0,
        'pressure': 991.0,
        'temperature': 18.0,
        'templow': 15.0,
        'wind_bearing': 114,
        'wind_gust_speed': 32.76,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-08T12:00:00',
        'humidity': 97,
        'precipitation': 10.6,
        'pressure': 984.0,
        'temperature': 15.0,
        'templow': 11.0,
        'wind_bearing': 183,
        'wind_gust_speed': 27.36,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-09T12:00:00',
        'humidity': 95,
        'precipitation': 6.3,
        'pressure': 1001.0,
        'temperature': 12.0,
        'templow': 11.0,
        'wind_bearing': 166,
        'wind_gust_speed': 48.24,
        'wind_speed': 18.0,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-10T12:00:00',
        'humidity': 75,
        'precipitation': 4.8,
        'pressure': 1011.0,
        'temperature': 14.0,
        'templow': 10.0,
        'wind_bearing': 174,
        'wind_gust_speed': 29.16,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-11T12:00:00',
        'humidity': 69,
        'precipitation': 0.6,
        'pressure': 1015.0,
        'temperature': 18.0,
        'templow': 12.0,
        'wind_bearing': 197,
        'wind_gust_speed': 27.36,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-12T12:00:00',
        'humidity': 82,
        'precipitation': 0.0,
        'pressure': 1014.0,
        'temperature': 17.0,
        'templow': 12.0,
        'wind_bearing': 225,
        'wind_gust_speed': 28.08,
        'wind_speed': 8.64,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-13T12:00:00',
        'humidity': 59,
        'precipitation': 0.0,
        'pressure': 1013.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 234,
        'wind_gust_speed': 35.64,
        'wind_speed': 14.76,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'partlycloudy',
        'datetime': '2023-08-14T12:00:00',
        'humidity': 56,
        'precipitation': 0.0,
        'pressure': 1015.0,
        'temperature': 21.0,
        'templow': 14.0,
        'wind_bearing': 216,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 88,
        'condition': 'partlycloudy',
        'datetime': '2023-08-15T12:00:00',
        'humidity': 64,
        'precipitation': 3.6,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 226,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-16T12:00:00',
        'humidity': 61,
        'precipitation': 2.4,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 233,
        'wind_gust_speed': 33.48,
        'wind_speed': 14.04,
      }),
    ]),
  })
# ---
# name: test_forecast_service[forecast]
  dict({
    'weather.smhi_test': dict({
      'forecast': list([
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-07T12:00:00',
          'humidity': 96,
          'precipitation': 0.0,
          'pressure': 991.0,
          'temperature': 18.0,
          'templow': 15.0,
          'wind_bearing': 114,
          'wind_gust_speed': 32.76,
          'wind_speed': 10.08,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2023-08-08T12:00:00',
          'humidity': 97,
          'precipitation': 10.6,
          'pressure': 984.0,
          'temperature': 15.0,
          'templow': 11.0,
          'wind_bearing': 183,
          'wind_gust_speed': 27.36,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2023-08-09T12:00:00',
          'humidity': 95,
          'precipitation': 6.3,
          'pressure': 1001.0,
          'temperature': 12.0,
          'templow': 11.0,
          'wind_bearing': 166,
          'wind_gust_speed': 48.24,
          'wind_speed': 18.0,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-10T12:00:00',
          'humidity': 75,
          'precipitation': 4.8,
          'pressure': 1011.0,
          'temperature': 14.0,
          'templow': 10.0,
          'wind_bearing': 174,
          'wind_gust_speed': 29.16,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-11T12:00:00',
          'humidity': 69,
          'precipitation': 0.6,
          'pressure': 1015.0,
          'temperature': 18.0,
          'templow': 12.0,
          'wind_bearing': 197,
          'wind_gust_speed': 27.36,
          'wind_speed': 10.08,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-12T12:00:00',
          'humidity': 82,
          'precipitation': 0.0,
          'pressure': 1014.0,
          'temperature': 17.0,
          'templow': 12.0,
          'wind_bearing': 225,
          'wind_gust_speed': 28.08,
          'wind_speed': 8.64,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2023-08-13T12:00:00',
          'humidity': 59,
          'precipitation': 0.0,
          'pressure': 1013.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 234,
          'wind_gust_speed': 35.64,
          'wind_speed': 14.76,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'partlycloudy',
          'datetime': '2023-08-14T12:00:00',
          'humidity': 56,
          'precipitation': 0.0,
          'pressure': 1015.0,
          'temperature': 21.0,
          'templow': 14.0,
          'wind_bearing': 216,
          'wind_gust_speed': 33.12,
          'wind_speed': 13.68,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2023-08-15T12:00:00',
          'humidity': 64,
          'precipitation': 3.6,
          'pressure': 1014.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 226,
          'wind_gust_speed': 33.12,
          'wind_speed': 13.68,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2023-08-16T12:00:00',
          'humidity': 61,
          'precipitation': 2.4,
          'pressure': 1014.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 233,
          'wind_gust_speed': 33.48,
          'wind_speed': 14.04,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecast]
  dict({
    'forecast': list([
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-07T12:00:00',
        'humidity': 96,
        'precipitation': 0.0,
        'pressure': 991.0,
        'temperature': 18.0,
        'templow': 15.0,
        'wind_bearing': 114,
        'wind_gust_speed': 32.76,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-08T12:00:00',
        'humidity': 97,
        'precipitation': 10.6,
        'pressure': 984.0,
        'temperature': 15.0,
        'templow': 11.0,
        'wind_bearing': 183,
        'wind_gust_speed': 27.36,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-09T12:00:00',
        'humidity': 95,
        'precipitation': 6.3,
        'pressure': 1001.0,
        'temperature': 12.0,
        'templow': 11.0,
        'wind_bearing': 166,
        'wind_gust_speed': 48.24,
        'wind_speed': 18.0,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-10T12:00:00',
        'humidity': 75,
        'precipitation': 4.8,
        'pressure': 1011.0,
        'temperature': 14.0,
        'templow': 10.0,
        'wind_bearing': 174,
        'wind_gust_speed': 29.16,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-11T12:00:00',
        'humidity': 69,
        'precipitation': 0.6,
        'pressure': 1015.0,
        'temperature': 18.0,
        'templow': 12.0,
        'wind_bearing': 197,
        'wind_gust_speed': 27.36,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-12T12:00:00',
        'humidity': 82,
        'precipitation': 0.0,
        'pressure': 1014.0,
        'temperature': 17.0,
        'templow': 12.0,
        'wind_bearing': 225,
        'wind_gust_speed': 28.08,
        'wind_speed': 8.64,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-13T12:00:00',
        'humidity': 59,
        'precipitation': 0.0,
        'pressure': 1013.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 234,
        'wind_gust_speed': 35.64,
        'wind_speed': 14.76,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'partlycloudy',
        'datetime': '2023-08-14T12:00:00',
        'humidity': 56,
        'precipitation': 0.0,
        'pressure': 1015.0,
        'temperature': 21.0,
        'templow': 14.0,
        'wind_bearing': 216,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 88,
        'condition': 'partlycloudy',
        'datetime': '2023-08-15T12:00:00',
        'humidity': 64,
        'precipitation': 3.6,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 226,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-16T12:00:00',
        'humidity': 61,
        'precipitation': 2.4,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 233,
        'wind_gust_speed': 33.48,
        'wind_speed': 14.04,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.smhi_test': dict({
      'forecast': list([
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-07T12:00:00',
          'humidity': 96,
          'precipitation': 0.0,
          'pressure': 991.0,
          'temperature': 18.0,
          'templow': 15.0,
          'wind_bearing': 114,
          'wind_gust_speed': 32.76,
          'wind_speed': 10.08,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2023-08-08T12:00:00',
          'humidity': 97,
          'precipitation': 10.6,
          'pressure': 984.0,
          'temperature': 15.0,
          'templow': 11.0,
          'wind_bearing': 183,
          'wind_gust_speed': 27.36,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2023-08-09T12:00:00',
          'humidity': 95,
          'precipitation': 6.3,
          'pressure': 1001.0,
          'temperature': 12.0,
          'templow': 11.0,
          'wind_bearing': 166,
          'wind_gust_speed': 48.24,
          'wind_speed': 18.0,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-10T12:00:00',
          'humidity': 75,
          'precipitation': 4.8,
          'pressure': 1011.0,
          'temperature': 14.0,
          'templow': 10.0,
          'wind_bearing': 174,
          'wind_gust_speed': 29.16,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-11T12:00:00',
          'humidity': 69,
          'precipitation': 0.6,
          'pressure': 1015.0,
          'temperature': 18.0,
          'templow': 12.0,
          'wind_bearing': 197,
          'wind_gust_speed': 27.36,
          'wind_speed': 10.08,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2023-08-12T12:00:00',
          'humidity': 82,
          'precipitation': 0.0,
          'pressure': 1014.0,
          'temperature': 17.0,
          'templow': 12.0,
          'wind_bearing': 225,
          'wind_gust_speed': 28.08,
          'wind_speed': 8.64,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2023-08-13T12:00:00',
          'humidity': 59,
          'precipitation': 0.0,
          'pressure': 1013.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 234,
          'wind_gust_speed': 35.64,
          'wind_speed': 14.76,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'partlycloudy',
          'datetime': '2023-08-14T12:00:00',
          'humidity': 56,
          'precipitation': 0.0,
          'pressure': 1015.0,
          'temperature': 21.0,
          'templow': 14.0,
          'wind_bearing': 216,
          'wind_gust_speed': 33.12,
          'wind_speed': 13.68,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2023-08-15T12:00:00',
          'humidity': 64,
          'precipitation': 3.6,
          'pressure': 1014.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 226,
          'wind_gust_speed': 33.12,
          'wind_speed': 13.68,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2023-08-16T12:00:00',
          'humidity': 61,
          'precipitation': 2.4,
          'pressure': 1014.0,
          'temperature': 20.0,
          'templow': 14.0,
          'wind_bearing': 233,
          'wind_gust_speed': 33.48,
          'wind_speed': 14.04,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_services
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2023-08-07T12:00:00',
    'humidity': 96,
    'precipitation': 0.0,
    'pressure': 991.0,
    'temperature': 18.0,
    'templow': 15.0,
    'wind_bearing': 114,
    'wind_gust_speed': 32.76,
    'wind_speed': 10.08,
  })
# ---
# name: test_forecast_services.1
  dict({
    'cloud_coverage': 75,
    'condition': 'partlycloudy',
    'datetime': '2023-08-13T12:00:00',
    'humidity': 59,
    'precipitation': 0.0,
    'pressure': 1013.0,
    'temperature': 20.0,
    'templow': 14.0,
    'wind_bearing': 234,
    'wind_gust_speed': 35.64,
    'wind_speed': 14.76,
  })
# ---
# name: test_forecast_services.2
  dict({
    'cloud_coverage': 100,
    'condition': 'fog',
    'datetime': '2023-08-07T09:00:00',
    'humidity': 100,
    'precipitation': 0.0,
    'pressure': 992.0,
    'temperature': 18.0,
    'templow': 18.0,
    'wind_bearing': 103,
    'wind_gust_speed': 23.76,
    'wind_speed': 9.72,
  })
# ---
# name: test_forecast_services.3
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2023-08-07T15:00:00',
    'humidity': 89,
    'precipitation': 0.0,
    'pressure': 991.0,
    'temperature': 16.0,
    'templow': 16.0,
    'wind_bearing': 108,
    'wind_gust_speed': 31.68,
    'wind_speed': 12.24,
  })
# ---
# name: test_setup_hass
  ReadOnlyDict({
    'attribution': 'Swedish weather institute (SMHI)',
    'cloud_coverage': 100,
    'forecast': list([
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-07T12:00:00',
        'humidity': 96,
        'precipitation': 0.0,
        'pressure': 991.0,
        'temperature': 18.0,
        'templow': 15.0,
        'wind_bearing': 114,
        'wind_gust_speed': 32.76,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-08T12:00:00',
        'humidity': 97,
        'precipitation': 10.6,
        'pressure': 984.0,
        'temperature': 15.0,
        'templow': 11.0,
        'wind_bearing': 183,
        'wind_gust_speed': 27.36,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'rainy',
        'datetime': '2023-08-09T12:00:00',
        'humidity': 95,
        'precipitation': 6.3,
        'pressure': 1001.0,
        'temperature': 12.0,
        'templow': 11.0,
        'wind_bearing': 166,
        'wind_gust_speed': 48.24,
        'wind_speed': 18.0,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-10T12:00:00',
        'humidity': 75,
        'precipitation': 4.8,
        'pressure': 1011.0,
        'temperature': 14.0,
        'templow': 10.0,
        'wind_bearing': 174,
        'wind_gust_speed': 29.16,
        'wind_speed': 11.16,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-11T12:00:00',
        'humidity': 69,
        'precipitation': 0.6,
        'pressure': 1015.0,
        'temperature': 18.0,
        'templow': 12.0,
        'wind_bearing': 197,
        'wind_gust_speed': 27.36,
        'wind_speed': 10.08,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'cloudy',
        'datetime': '2023-08-12T12:00:00',
        'humidity': 82,
        'precipitation': 0.0,
        'pressure': 1014.0,
        'temperature': 17.0,
        'templow': 12.0,
        'wind_bearing': 225,
        'wind_gust_speed': 28.08,
        'wind_speed': 8.64,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-13T12:00:00',
        'humidity': 59,
        'precipitation': 0.0,
        'pressure': 1013.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 234,
        'wind_gust_speed': 35.64,
        'wind_speed': 14.76,
      }),
      dict({
        'cloud_coverage': 100,
        'condition': 'partlycloudy',
        'datetime': '2023-08-14T12:00:00',
        'humidity': 56,
        'precipitation': 0.0,
        'pressure': 1015.0,
        'temperature': 21.0,
        'templow': 14.0,
        'wind_bearing': 216,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 88,
        'condition': 'partlycloudy',
        'datetime': '2023-08-15T12:00:00',
        'humidity': 64,
        'precipitation': 3.6,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 226,
        'wind_gust_speed': 33.12,
        'wind_speed': 13.68,
      }),
      dict({
        'cloud_coverage': 75,
        'condition': 'partlycloudy',
        'datetime': '2023-08-16T12:00:00',
        'humidity': 61,
        'precipitation': 2.4,
        'pressure': 1014.0,
        'temperature': 20.0,
        'templow': 14.0,
        'wind_bearing': 233,
        'wind_gust_speed': 33.48,
        'wind_speed': 14.04,
      }),
    ]),
    'friendly_name': 'test',
    'humidity': 100,
    'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    'pressure': 992.0,
    'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
    'supported_features': <WeatherEntityFeature: 3>,
    'temperature': 18.0,
    'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
    'thunder_probability': 37,
    'visibility': 0.4,
    'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
    'wind_bearing': 93,
    'wind_gust_speed': 22.32,
    'wind_speed': 9.0,
    'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_setup_hass.1
  dict({
    'cloud_coverage': 100,
    'condition': 'rainy',
    'datetime': '2023-08-08T12:00:00',
    'humidity': 97,
    'precipitation': 10.6,
    'pressure': 984.0,
    'temperature': 15.0,
    'templow': 11.0,
    'wind_bearing': 183,
    'wind_gust_speed': 27.36,
    'wind_speed': 11.16,
  })
# ---
